A few new files.

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,20 @@
       <a href="/"><img src="/static/images/pyib_logo.png" border="0" width="240" height="120" alt="Logo"></a><br>
     </div>
     <div style="text-align: center;font-weight: bold;">Rules: No pornographic images/child models/invasion discussion</div>
+    <hr>
+    <div style="text-align: center;">
+      <script type="text/javascript"><!--
+      google_ad_client = "pub-6158454562572132";
+      /* PyIB Top of Page */
+      google_ad_slot = "0710455317";
+      google_ad_width = 728;
+      google_ad_height = 90;
+      //-->
+      </script>
+      <script type="text/javascript"
+      src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+      </script>
+    </div>
     <hr>{% block page %}{% endblock %}
     <div class="footer" style="clear: both;">
       - <a href="http://www.2chan.net">futaba</a> + <a href="http://www.1chan.net">futallaby</a> + <a href="http://www.kusaba.org">kusaba</a> + <a href="http://pyib.appspot.com">PyIB</a> -{% if administratorview %}<br>
