--- a/templates/index.html
+++ b/templates/index.html
@@ -68,8 +68,8 @@
                 <li>Supported file types are: GIF, JPG, PNG</li>
                 <li>Maximum file size allowed is {{ maxsize_display }}.</li>
                 <li>Images greater than {{ maxdimensions}}x{{ maxdimensions}} pixels will be thumbnailed.</li>
-                <li><a href="http://code.google.com/p/pyib/">Code Page</a>, <a href="http://groups.google.com/group/pyib-discuss">Discussion Group</a>, <a href="http://appgallery.appspot.com/about_app?app_id=agphcHBnYWxsZXJ5chMLEgxBcHBsaWNhdGlvbnMYrwcM">Applications Gallery Entry</a></li>
-                <li><a href="/catalog.html">View catalog</a></li>
+                <li><a href="http://code.google.com/p/pyib/">Code page</a>, <a href="http://groups.google.com/group/pyib-discuss">Discussion group</a>, <a href="http://appgallery.appspot.com/about_app?app_id=agphcHBnYWxsZXJ5chMLEgxBcHBsaWNhdGlvbnMYrwcM">Applications Gallery entry</a></li>
+                <li><a href="/search">Search posts</a>, <a href="/catalog.html">View catalog</a></li>
               </ul>
             </td>
           </tr>
