--- a/templates/base.html
+++ b/templates/base.html
@@ -6,24 +6,24 @@
     <link rel="stylesheet" type="text/css" href="/static/css/futaba.css" title="Futaba">
     <link rel="alternate stylesheet" type="text/css" href="/static/css/burichan.css" title="Burichan">
     <script type="text/javascript"><!--
-    var style_cookie = 'pyib_style';
+    var style_cookie = 'kumo_style';
     var ispage = {{ is_page }};
     //--></script>
-    <script type="text/javascript" src="/static/js/pyib.js"></script>
+    <script type="text/javascript" src="/static/js/kumo.js"></script>
   </head>
   <body>
     <div class="adminbar">
       [<a href="#" onclick="javascript:set_stylesheet('Futaba');return false;">Futaba</a>] [<a href="#" onclick="javascript:set_stylesheet('Burichan');return false;">Burichan</a>] - [<a href="/{% if administratorview %}?admin{% endif %}">Home</a>] [<a href="/panel">Account</a>]{% if administratorview %} [<a href="/admin">Manage</a>]{% endif %}
     </div>
     <div class="logo">
-      <a href="/"><img src="/static/images/pyib_logo.png" border="0" width="240" height="120" alt="Logo"></a><br>
+      <a href="/"><img src="/static/images/kumo_logo.png" border="0" width="240" height="120" alt="Logo"></a><br>
     </div>
     <div style="text-align: center;font-weight: bold;">Rules: No pornographic images/child models/invasion discussion</div>
     <hr>
     <div style="text-align: center;">
       <script type="text/javascript"><!--
       google_ad_client = "pub-6158454562572132";
-      /* PyIB Top of Page */
+      /* kumo Top of Page */
       google_ad_slot = "0710455317";
       google_ad_width = 728;
       google_ad_height = 90;
@@ -35,7 +35,7 @@
     </div>
     <hr>{% block page %}{% endblock %}
     <div class="footer" style="clear: both;">
-      - <a href="http://www.2chan.net">futaba</a> + <a href="http://www.1chan.net">futallaby</a> + <a href="http://www.kusaba.org">kusaba</a> + <a href="http://pyib.appspot.com">PyIB</a> -{% if administratorview %}<br>
+      - <a href="http://www.2chan.net">futaba</a> + <a href="http://www.1chan.net">futallaby</a> + <a href="https://github.com/tslocum/kumo">kumo</a> -{% if administratorview %}<br>
       - Administrator View -{% else %}{% if cached %}<br>
       - Cached {{ cached }} -{% else %}{% if execution_time_seconds %}<br>
       - Took {{ execution_time_seconds }}.{{ execution_time_microseconds }} seconds -{% endif %}{% endif %}{% endif %}
