--- a/static/css/futaba.css
+++ b/static/css/futaba.css
@@ -163,3 +163,13 @@ a:hover {
 .reflinkpreview {
 	background-color: #F0E0D6 !important;
 }
+
+.spoiler {
+	background: #F0D0B6;
+	color: #F0D0B6;
+}
+
+.spoiler:hover {
+	background: #F0D0B6;
+	color: #800000;
+}
