Add supporting long messages

--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,8 @@
     &nbsp;[<a href="/res/{{ thread.op_postid }}.html{% if administratorview %}?admin=view{% endif %}">Reply</a>]{% endif %}{% endif %}{% if administratorview %}
      [<a href="/admin/delete/{{ post.key() }}">D</a> <a href="/admin/ban/{{ post.key() }}">B</a>]{% endif %}
     <blockquote>
-    {{ post.message|safe }}
+    {% if replythread %}{{ post.message|safe }}{% else %}{% if post.short_message %}{{ post.short_message|safe }}<div class="abbrev">
+      <br>Message too long. <a href="/res/{{ thread.op_postid }}.html#{{ post.postid }}">Full text</a>.</div>{% else %}{{ post.message|safe }}{% endif %}{% endif %}
     </blockquote>{% endif %}{% if not post.parentid %}{% if not replythread %}{% if thread.replieshidden %}
     <span class="omittedposts">
       {{ thread.replieshidden }} post{{ thread.replieshidden|pluralize }} omitted.  Click <a href="/res/{{ thread.op_postid }}.html{% if administratorview %}?admin=view{% endif %}">Reply</a> to view.
