add info about submitting post, underline marking added

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -115,6 +115,10 @@ form .trap {
 	background-color: black;
 }
 
+.underline {
+	text-decoration: underline;
+}
+
 .extrabtns {
 	vertical-align: middle;
 }
