fix: safe error message

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,1 +1,1 @@
-{% extends "base.html" %}{% block page %}<h1 style="text-align: center">{{ error }}</h1>{% endblock %}
+{% extends "base.html" %}{% block page %}<h1 style="text-align: center">{{ error|safe }}</h1>{% endblock %}
