--- a/templates/index.html
+++ b/templates/index.html
@@ -68,8 +68,9 @@
                 <li>Supported file types are: GIF, JPG, PNG</li>
                 <li>Maximum file size allowed is {{ maxsize_display }}.</li>
                 <li>Images greater than {{ maxdimensions}}x{{ maxdimensions}} pixels will be thumbnailed.</li>
-                <li>kumo is open source software.  <a href="https://github.com/tslocum/kumo">Fork kumo on GitHub</a></li>
                 <li><!--<a href="/search">Search posts</a>, TODO --><a href="/catalog.html">View catalog</a></li>
+                <li>Supported <a href="/marking.html">marking</a>.</li>
+                <li>kumo is open source software.  <a href="https://github.com/tslocum/kumo">Fork kumo on GitHub</a></li>
               </ul>
             </td>
           </tr>
