--- a/static/css/global.css
+++ b/static/css/global.css
@@ -161,3 +161,12 @@ form .trap {
 	background-color: #F0E0D6;
 	border: 1px dotted #000000;
 }
+
+.nothumb {
+	float: left;
+	background: #eee;
+	border: 2px dashed #aaa;
+	text-align: center;
+	margin: 2px 20px;
+	padding: 1em 0.5em 1em 0.5em;
+}
