--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     </style>{% endif %}{% if replythread %}
     &#91;<a href="/{% if administratorview %}?admin=view{% endif %}">Return</a>&#93;<div class="replymode">Posting mode: Reply</div>{% endif %}
     <div class="postarea">
-      <form name="postform" id="postform" action="/post" method="post" enctype="multipart/form-data">{% if replythread %}
+      <form name="postform" id="postform" action="{% if form_action %}{{ form_action }}{% else %}/post{% endif %}" method="post" enctype="multipart/form-data">{% if replythread %}
       <input type="hidden" name="parent" value="{{ replythread }}">{% endif %}
       <input type="hidden" name="MAX_FILE_SIZE" value="{{ MAX_FILE_SIZE }}">
       <table class="postform">
@@ -16,8 +16,8 @@
               Name
             </td>
             <td>
-              <input type="text" name="name" size="19" maxlength="75" accesskey="n">
-              <input type="checkbox" name="anonymous" id="anonymous" onclick="javascript:anonymouscheckbox(this);"> <label for="anonymous">Display as Anonymous</label>
+              <input type="text" name="name" size="19" maxlength="75" accesskey="n"{% if editing_post %} value="{{ editing_name }}"{% else %}>
+              <input type="checkbox" name="anonymous" id="anonymous" onclick="javascript:anonymouscheckbox(this);"> <label for="anonymous">Display as Anonymous</label{% endif %}>
             </td>
           </tr>
           <tr>
@@ -25,8 +25,8 @@
               Email
             </td>
             <td>
-              <input type="text" name="email" size="19" maxlength="75" accesskey="e">{% if administratorview %}
-              <input type="checkbox" name="administrator" id="administrator"> <label for="administrator">Display as Administrator</label>{% endif %}
+              <input type="text" name="email" size="19" maxlength="75" accesskey="e"{% if editing_post %} value="{{ editing_email }}"{% else %}{% if administratorview %}>
+              <input type="checkbox" name="administrator" id="administrator"> <label for="administrator">Display as Administrator</label{% endif %}>{% endif %}
             </td>
           </tr>
           <tr>
@@ -34,8 +34,8 @@
               Subject
             </td>
             <td>  
-              <input type="text" name="subject" size="40" maxlength="75" accesskey="s">
-              <input type="submit" value="Submit" accesskey="z">&nbsp;(<span id="posttypeindicator">{% if replythread %}reply to {{ op_postid }}{% else %}new thread{% endif %}</span>)
+              <input type="text" name="subject" size="40" maxlength="75" accesskey="s"{% if editing_subject %} value="{{ editing_subject }}"{% endif %}>
+              <input type="submit" value="{% if editing_post_id %}Update{% else %}Submit{% endif %}" accesskey="z">&nbsp;(<span id="posttypeindicator">{% if replythread %}{% if editing_post_id %}edit {{ editing_post_id }}{% else %}reply to {{ op_postid }}{% endif %}{% else %}new thread{% endif %}</span>)
             </td>
           </tr>
           <tr>
@@ -43,7 +43,7 @@
               Message
             </td>
             <td>
-              <textarea name="message" cols="48" rows="4" accesskey="m"></textarea>
+              <textarea name="message" cols="48" rows="4" accesskey="m">{{ editing_message }}</textarea>
             </td>
           </tr>
           <tr>
@@ -51,9 +51,10 @@
               File<a href="?admin=view" style="text-decoration: none;" accesskey="x">&nbsp;</a>
             </td>
             <td>
-              <input type="file" name="file" size="35" accesskey="f">
+              <input type="file" name="file" size="35" accesskey="f">{% if editing_post %}{% if editing_post_has_image %}
+              <input type="checkbox" name="deleteimage" id="deleteimage"> <label for="deleteimage">delete image</label>{% endif %}{% endif %}
             </td>
-          </tr>
+          </tr>{% if not editing_post %}
           <tr>
             <td class="postblock">
               Password
@@ -61,7 +62,7 @@
             <td>
               <input type="password" name="password" size="8" accesskey="p" autocomplete="off">&nbsp;(for post and file deletion)
             </td>
-          </tr>
+          </tr>{% endif %}
           <tr>
             <td colspan="2" class="rules">
               <ul style="margin-left: 0; margin-top: 0; margin-bottom: 0; padding-left: 0;">
@@ -109,15 +110,15 @@
     <span class="reflink">
       <a href="{% if replythread %}#{{ post.postid }}" onclick="javascript:highlight('{{ post.postid }}');{% else %}/res/{{ thread.op_postid }}.html#{{ post.postid }}{% endif %}">No.</a>
       {% if replythread %}<a href="#i{{ post.postid }}" onclick="insert('>>{{ post.postid }}');">{% else %}<a href="/res/{{ thread.op_postid }}.html#i{{ post.postid }}">{% endif %}{{ post.postid }}</a>
-    </span>{% if post.parentid %}{% if post.image %}
+    </span>{% if not post.parentid %}{% if not replythread %}
+    &nbsp;[<a href="/res/{{ thread.op_postid }}.html{% if administratorview %}?admin=view{% endif %}">Reply</a>]{% endif %}{% endif %}{% if administratorview %}
+     [<a href="/admin/delete/{{ post.key() }}">D{% if post.image %}</a> - <a href="/admin/delete_image/{{ post.key() }}">DI{% endif %}</a> - <a href="/admin/ban/{{ post.key() }}">B</a> - <a href="/admin/edit/{{ post.key() }}">E</a>]{% endif %}{% if post.parentid %}{% if post.image %}
     <br>
     <span class="filesize">File: <a href="/src/{{ post.key() }}/{{ post.image_filename }}" onclick="javascript:expandimg('{{ post.postid }}', '/src/{{ post.key() }}/{{ post.image_filename }}', '/thumb/{{ post.key() }}/{{ post.thumb_filename }}', '{{ post.image_width }}', '{{ post.image_height }}', '{{ post.thumb_width }}', '{{ post.thumb_height }}');return false;">{{ post.image_filename }}</a> -({{ post.image_size_formatted }}, {{ post.image_width }}x{{ post.image_height }}{% if replythread %}, {{ post.image_original }}{% endif %})</span>
     <br>
     <a target="_blank" href="/src/{{ post.key() }}/{{ post.image_filename }}">
       <span id="thumb{{ post.postid }}"><img src="/thumb/{{ post.key() }}/{{ post.thumb_filename }}" alt="{{ post.postid }}" class="thumb" width="{{ post.thumb_width }}" height="{{ post.thumb_height }}"></span>
-    </a>{% else %}{% if post.image_deleted %}<div class="nothumb">Image<br>deleted</div>{% endif %}{% endif %}{% else %}{% if not replythread %}
-    &nbsp;[<a href="/res/{{ thread.op_postid }}.html{% if administratorview %}?admin=view{% endif %}">Reply</a>]{% endif %}{% endif %}{% if administratorview %}
-     [<a href="/admin/delete/{{ post.key() }}">D</a> <a href="/admin/ban/{{ post.key() }}">B</a>]{% endif %}
+    </a>{% else %}{% if post.image_deleted %}<div class="nothumb">Image<br>deleted</div>{% endif %}{% endif %}{% endif %}
     <blockquote>
     {% if replythread %}{{ post.message|safe }}{% else %}{% if post.short_message %}{{ post.short_message|safe }}<div class="abbrev">
       <br>Message too long. <a href="/res/{{ thread.op_postid }}.html#{{ post.postid }}">Full text</a>.</div>{% else %}{{ post.message|safe }}{% endif %}{% endif %}
@@ -135,7 +136,7 @@
     <tbody>
     <tr>
     <td>
-    Delete Post [<input type="checkbox" name="imageonly" id="imageonly" checked><label for="imageonly">Image Only</label>]<br>Password <input type="password" name="password" size="8" autocomplete="off">&nbsp;<input name="deletepost" value="Delete" type="submit">
+    Delete Post [<input type="checkbox" name="imageonly" id="imageonly"><label for="imageonly">Image Only</label>]<br>Password <input type="password" name="password" size="8" autocomplete="off">&nbsp;<input name="deletepost" value="Delete" type="submit">
     </td>
     </tr>
     </tbody>
